2009-08-03  Derek R. Price  <derek@ximbiot.com>

	* parseinfo.c (parse_config): Find alternate config files correctly.

2009-07-18  Derek R. Price  <derek@ximbiot.com>

	* subr.c (sleep_past): Don't assume that time() called after
	gettimeofday() must return a seconds value >= than gettimeofday() did.

2008-12-02  Larry Jones  <lawrence.jones@siemens.com>

	* commit.c: Remove defunct variable (got_message).
	* edit.c (send_notifications, edit, unedit): Use CVS_LOCK_NONE instead
	of 0 in calls to start_recursion to avoid compiler warnings.
	* parseinfo.c: Remove duplicate definition of config (from main.c).
	* hash.c (walklist): Cast function pointers to void * for tracing.
	* recurse.c (start_recursion): Ditto.

2008-11-25  Larry Jones  <lawrence.jones@siemens.com>

	* Makefile.in: Regenerated with Autoconf 2.63.

2008-11-19  Larry Jones  <lawrence.jones@siemens.com>

	* entries.c (WriteTag): Remove any exiting file and recreate
	rather than trying to overwrite (to avoid permission problems).

	* sanity.sh (keyword-25): Protect keywords against accidental
	expansion in sanity.sh itself.

2008-11-18  Larry Jones  <lawrence.jones@siemens.com>

	* client.c (add_prune_candidate): Strip all trailing slashes.

	* client.c commit.c, history.c, logmsg.c, rcs.c, repos.c, tag.c,
	  update.c, vers_ts.c: Fix gcc -Wall warnings.

	* sanity.sh: Fix nonportable ``date +%s'' test.

2008-11-17  Larry Jones  <lawrence.jones@siemens.com>

	* rcs.c (findmagictag): Don't try to do arithmetic on void *.

2008-11-15  Larry Jones  <lawrence.jones@siemens.com>

	* find_names.c (Find_Directories): Use TRACE_NULL for repository.

2008-11-05  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (keyword-25): Fix merge from cvs 1.11.x problem.

	*diff.c (diff): Use SEND_FORCE on files when a -k option is used
	with diff to avoid client/server not finding the requested file.
	* sanity.sh (keyword): Add tests for this.

	* checkout.c (checkout): For multiroot checkout/update operations,